@startuml Hotel

class Usuario {
  - nome: String
  - login: String
  - senha: String
  - listaTelefone: List<Telefone>
  - endereco: Endereco
  - reservas: List<Reserva>
}

class Telefone {
  - codigoArea: String
  - numero: String
}

class Endereco {
  - estado: String
  - cidade: String
  - quadra: String
  - rua: String
  - numero: String
}

class Reserva {
  - dataInicio: LocalDate
  - dataFinal: LocalDate
  - pagamento: Pagamento
}

class Pagamento {
  - tipoPagamento: TipoPagamento
  - valor: double
}

class Quarto {
  - numero: int
  - tipo: TipoQuarto
  - preco: double
  - disponivel: Boolean
}

class QuartoDescricao {
  - descricao: String
  - quartoHotel: Quarto
}

enum TipoQuarto {
  SIMPLES,
  CASAL,
  LUXO,
  PRESIDENCIAL
}

enum TipoPagamento {
  CARTAO_CREDITO,
  CARTAO_DEBITO,
  PIX,
  TRANSFERENCIA
}

Usuario "1" --o "0..*" Telefone
Usuario "1" --o "1" Endereco
Usuario "1" --o "0..*" Reserva
Reserva "1" --o "1" Quarto
Reserva "1" --o "0..1" Pagamento
Reserva "1" --o "1" Usuario
Pagamento "1" --o "1" Reserva
Quarto "1" --o "1..*" QuartoDescricao
Quarto "1" --o "0..*" Reserva
Quarto ..> TipoQuarto
Pagamento ..> TipoPagamento

@enduml
